many many changes, mostly related to audio